--- a/post_mortem_safe_front/styles/Home.module.css
+++ b/post_mortem_safe_front/styles/Home.module.css
@@ -30,13 +30,6 @@
 
 .title a {
   color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
 }
 
 .title {
@@ -82,7 +75,6 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
 }
 
 .card:hover,
@@ -121,7 +113,7 @@
     border-color: #222;
   }
   .code {
-    background: #111;
+    background: #EEE;
   }
   .logo img {
     filter: invert(1);
